[package]
name = "flash_sync"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["shealtielanz <shanzydinero@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = "0.66.1"
fuel-tx = "0.57.0"
tokio = { version = "1.12", features = ["rt", "macros"] }

[dependencies]
rand = "0.8"
sha2 = { version = "0.10.7" }

[[test]]
harness = true
name = "integration_tests"
path = "integration_tests/harness.rs"
